--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,9 @@
 version: '3'
 services:
     backend:
-        container_name: ng_server
-        build:
-          context: .
-          dockerfile: Dockerfile
-        image: ng_solution
-        stdin_open: true
-        tty: true
+        build: .
+        command: /ng/entrypoint.sh
+        volumes: 
+            - .:/ng
         ports:
             - "8000:8000"
