--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3'
 services:
     backend:
         build: .
-        command: /ng/entrypoint.sh
-        volumes: 
+        command: sh /ng/entrypoint.sh
+        volumes:
             - .:/ng
         ports:
             - "8000:8000"
